--- a/Codigos/greeninicio.html
+++ b/Codigos/greeninicio.html
@@ -10,6 +10,7 @@
     <header>
         <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
     </header>
+    <h1><a href="carrinho.html">Carrinho </a></h1>
     <div class="pontos">
         <div class="iconIMG">
             <a href="brindes.html"><img src="imagens/logopontos.png" alt="icon pontos" class="IconPontos"></a>
@@ -35,7 +36,7 @@
      <h5 class="noticia">NOTÍCIA</h5>
      <div class="quadNoticias">
         <div><img src="imagens/noticiaCO2.png" width="100%"><p>Emisssão de CO2</p></div>
-        <div><img src="imagens/noticiaQuem.png" width="100%"><p>Queimadas</p></div>
+        <div><a href="noticia.html"><img src="imagens/noticiaQuem.png" width="100%"><p>Queimadas</p></a></div>
         <div><img src="imagens/noticiaAlag.png" width="100%"><p>Alagamento do RS</p></div>
         <div><img src="imagens/noticiaRec.png" width="100%"><p>Reciclagem</p></div>
         
