--- a/Codigos/infoDesafio.html
+++ b/Codigos/infoDesafio.html
@@ -20,10 +20,10 @@
      <div class="infos">
         <div><img src="imagens/logopontos.png" alt=""></div>
         <p>10</p>
-        <p>RECICLE</p>
+        <p> Separação de Resíduos</p>
         <a href="feedback.html"><img src="imagens/logofeed.png" alt=""></a>
       </div>
-      **Desafio de Reciclagem: Separação de Resíduos**
+      
 
 Durante uma semana, separe seus resíduos em três categorias: recicláveis (plásticos, papéis, vidros e metais), orgânicos (restos de comida, folhas) e não recicláveis. Tudo deve ser feito corretamente para garantir a reciclagem e o descarte adequado.
      
