--- a/Codigos/brindes.html
+++ b/Codigos/brindes.html
@@ -15,6 +15,13 @@
     <div class="pontos">
         <div class="iconIMG">
             <a href="brindes.html"> <img src="imagens/logopontos.png" alt="icon pontos" class="IconPontos"></a>
+            <div class="carrinhoIcon">
+                <a href="carrinho.html">    
+                    <?xml version="1.0" ?><svg id="Layer_1" style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css">
+                        .st0{fill:#1E232D;}
+                    </style><path class="st0" d="M20.9,6H17V5c0-2.8-2.2-5-5-5S7,2.2,7,5v5h2V8h4V6H9V5c0-1.7,1.3-3,3-3c1.7,0,3,1.3,3,3v5h2V8h2.1l0.9,14H4.1  L4.9,8H5V6H3.1L1.9,24h20.1L20.9,6z"/></svg>
+                </a>
+            </div>
         </div>
 
         <h4>Seus pontos</h4>
@@ -39,7 +46,7 @@
         </div>
         <div class="brinde">
             <a href="produto.html">
-                <img src="imagens/cuidadordeidoso.jpg" alt="CursoCuidador" class="brindeCursos" height="">
+                <img src="imagens/cuidadordeidosos.png" alt="CursoCuidador" class="brindeCursos" h>
                 <h4 class="nomeBrinde">Curso: Cuidador de Idosos</h4>
                 <div class="pontosBrinde">
                     <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto">
@@ -49,8 +56,8 @@
         </div>
         <div class="brinde">
             <a href="produto.html">
-                <img src="imagens/kitbambu.png" alt="kitBambu" >
-                <h4 class="nomeBrinde">Kit 3 Utensilios de Bambu</h4>
+                <img src="imagens/kitbambu.png" alt="kitBambu">
+                <h4 class="nomeBrinde">Kit 4 Utensilios de Bambu</h4>
                 <div class="pontosBrinde">
                     <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto">
                     <h5>100</h5>
@@ -59,7 +66,7 @@
         </div>
         <div class="brinde">
             <a href="produto.html">
-                <img src="imagens/ecobag.webp" alt="Ecobag">
+                <img src="imagens/ecobag.png" alt="Ecobag" height="">
                 <h4 class="nomeBrinde">Ecobag</h4>
                 <div class="pontosBrinde">
                     <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto" >
@@ -69,21 +76,21 @@
         </div>
         <div class="brinde">
             <a href="produto.html">
-                <img src="imagens/cursoEnfermagem.jpg" alt="cursoEnfermagem" class="brindeCursos">
+                <img src="imagens/cursoEnfermeira.jpg" alt="cursoEnfermagem" class="brindeCursos">
                 <h4 class="nomeBrinde">50% Curso: Tecnico em Enfermagem</h4>
                 <div class="pontosBrinde">
                     <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto">
-                    <h5>150</h5>
+                    <h5>1800</h5>
                 </div>
             </a>
         </div>
         <div class="brinde">
             <a href="produto.html">
-                <img src="imagens/camisetaecologica.png" alt="camisaEcologica">
-                <h4 class="nomeBrinde">Camiseta Ecologica</h4>
+                <img src="imagens/vaso.png" alt="vasoGroot">
+                <h4 class="nomeBrinde">Vaso Groot</h4>
                 <div class="pontosBrinde">
                     <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto">
-                    <h5>150</h5>
+                    <h5>300</h5>
                 </div>
             </a>
         </div>
