--- a/Codigos/carrinho.html
+++ b/Codigos/carrinho.html
@@ -10,6 +10,35 @@
     <header>
         <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
     </header>
+    <!DOCTYPE html>
+<html lang="pt">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Carrinho de Compras</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<div class="container">
+    <header>
+        <h1>CARRINHO</h1>
+    </header>
+    <div class="product">
+        <img src="caminho-para-sua-imagem.jpg" alt="Produto">
+        <div class="product-info">
+            <p>Nome Produto</p>
+            <div class="quantity">
+                <button>-</button>
+                <input type="number" value="1">
+                <button>+</button>
+            </div>
+        </div>
+    </div>
+    <button class="finalize">Finalizar</button>
+</div>
+</body>
+</html>
+
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
