adição de novos projetos

--- a/Codigos/entrar.html
+++ b/Codigos/entrar.html
@@ -10,6 +10,16 @@
     <header>
         <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
     </header>
+    <h2>ENTRAR</h2>
+    <hr width="80%">
+    <label for="email">Insira seu e-mail:</label><br>
+    <input type="text" id="email" name="email" required><br><br>
+    <label for="senha">Senha:</label><br>
+    <input type="password" id="senha" name="senha" required><br><br>
+    <button>Entrar</button>
+    <button>Facebook</button>
+    <button>Google</button>
+    <p>Não tem conta ainda?<a href="/"> Cadastrar-se</a></p>
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
