--- a/Codigos/ini-desafio.html
+++ b/Codigos/ini-desafio.html
@@ -10,6 +10,23 @@
     <header>
         <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
     </header>
+    <div class="titulo">
+    <h4>DESAFIO</h4>
+    </div>
+    <hr width="80%">
+    <div class="img-principal">
+    <img src="imagens/image 36.png" alt="" width="45%"></div>
+    <div class="subtitulo">
+    <p>Faça em 3 dias</p>
+    </div>
+    <div class="info">
+    <div><p>1</p></div>
+    <div><p>2</p></div>
+    <div><p>3</p></div>
+    </div>
+    <button>CONCLUIDO</button>
+    <div class="recado"><p>Ficamos felizes em ter você conosco nesse desafio, contamos com você nos proximos</p>
+    <p class="ate">ATÉ LOGO!!</p></div>
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
