--- a/Codigos/brindes.html
+++ b/Codigos/brindes.html
@@ -10,18 +10,17 @@
 
 <body>
     <header>
-        <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
+        <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife"
+                class="logo-principal"><a>
     </header>
     <div class="pontos">
+        <div class="carrinhoIcon">
+            <a href="carrinho.html">
+                <img src="imagens/bag.webp" alt="sacolaDeCompras">
+            </a>
+        </div>
         <div class="iconIMG">
             <a href="brindes.html"> <img src="imagens/logopontos.png" alt="icon pontos" class="IconPontos"></a>
-            <div class="carrinhoIcon">
-                <a href="carrinho.html">    
-                    <?xml version="1.0" ?><svg id="Layer_1" style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css">
-                        .st0{fill:#1E232D;}
-                    </style><path class="st0" d="M20.9,6H17V5c0-2.8-2.2-5-5-5S7,2.2,7,5v5h2V8h4V6H9V5c0-1.7,1.3-3,3-3c1.7,0,3,1.3,3,3v5h2V8h2.1l0.9,14H4.1  L4.9,8H5V6H3.1L1.9,24h20.1L20.9,6z"/></svg>
-                </a>
-            </div>
         </div>
 
         <h4>Seus pontos</h4>
@@ -69,7 +68,7 @@
                 <img src="imagens/ecobag.png" alt="Ecobag" height="">
                 <h4 class="nomeBrinde">Ecobag</h4>
                 <div class="pontosBrinde">
-                    <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto" >
+                    <img src="imagens/logomoeda.webp" alt="pontosNecessarios" class="moedaPonto">
                     <h5>230</h5>
                 </div>
             </a>
@@ -98,7 +97,7 @@
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
-           <a href="greeninicio.html"><img src="imagens/logoinicio.png" alt="home"></a> 
+            <a href="greeninicio.html"><img src="imagens/logoinicio.png" alt="home"></a>
             <a href="greenDesafios.html"><img src="imagens/logodesafio.png" alt="desafio"> </a>
             <a href="blog.html"><img src="imagens/logoblog.png" alt="blog"></a>
             <a href="mapa.html"><img src="imagens/logomapa.png" alt="mapa"></a>
