adição de novos projetos

--- a/Codigos/entrar.html
+++ b/Codigos/entrar.html
@@ -10,10 +10,13 @@
     <header>
         <a href="greeninicio.html"><img src="imagens/GreenLife-Sem-Fundo-Sem-Escrita 1.png" alt="Logo do GreenLife" class="logo-principal"><a>
     </header>
-    <h2>ENTRAR</h2>
+    
+    <h2 class="titulo">ENTRAR</h2>
     <hr width="80%">
+    <div class="email">    
     <label for="email">Insira seu e-mail:</label><br>
     <input type="text" id="email" name="email" required><br><br>
+</div>
     <label for="senha">Senha:</label><br>
     <input type="password" id="senha" name="senha" required><br><br>
     <button>Entrar</button>
