--- a/Codigos/infoDesafio.html
+++ b/Codigos/infoDesafio.html
@@ -21,17 +21,12 @@
         <div><img src="imagens/noticiaCO2.png" alt=""></div>
     </div>
     <div class="infos">
-        <div class="infoPontos">
-            <img src="imagens/logopontos.png" alt="">
-            <div class="qntPontos"><h3>10</h3></div>
+        <div class="infosTop">
+            <img src="imagens/logopontos.png" alt="Logo pontos">
             <h3>RECICLE</h3>
             <img src="imagens/logofeed.png" alt="Logo feedback">
         </div>
-        <p>Durante uma semana, separe seus resíduos em três categorias: recicláveis (plásticos, papéis, vidros e metais),
-        orgânicos (restos de comida, folhas) e não recicláveis. Tudo deve ser feito corretamente para garantir a reciclagem
-        e o descarte adequado.</p>
     </div>
-
 
 
     <a href="ini-desafio.html"><button>PARTICIPAR</button></a>
