--- a/Codigos/perfil.html
+++ b/Codigos/perfil.html
@@ -29,11 +29,11 @@
     <div><img src="imagens/logomaps.png" alt="mapa"><p>cafe cereja 250</p></div>
     <div><img src="imagens/logotelefone.png" alt="telefone"><p>04398989-8989</p></div>
 </div>
-<div class="desafio">
-    <img src="imagens/logodesafio.png" alt="">
+<div class="carrinho">
+    <a href="carrinho.html"><button>CARRINHO</button></a>
 </div>
-<div class="pontos">
-    <img src="imagens/logopontos.png" alt="">
+<div class="entrar">
+    <a href="entrar.html"><button>ENTRAR</button></a>
 </div>
     <hr width="75%">
 
