adição de novos arquivos

--- a/Codigos/brindes.html
+++ b/Codigos/brindes.html
@@ -44,7 +44,7 @@
             </a>
         </div>
         <div class="brinde">
-            <a href="produto.html">
+            <a href="produtocurso.html">
                 <img src="imagens/cuidadordeidosos.png" alt="CursoCuidador" class="brindeCursos" h>
                 <h4 class="nomeBrinde">Curso: Cuidador de Idosos</h4>
                 <div class="pontosBrinde">
