--- a/Codigos/cadastro.html
+++ b/Codigos/cadastro.html
@@ -19,7 +19,7 @@
         <div class="infos"><h5>Telefone:</h5><input class="inpTelefone" type="number"></div>
         <div class="infos"><h5>CPF:</h5><input class="inpCPF" type="number"></div>
         <div class="infos"><h5>Senha:</h5><input class="inpSenha" type="password"></div>
-        <div class="btnConfirmar"><button>Confirmar</button></div>
+        <button>Confirmar</button>
     </div>
     <div class="spacer"></div>
     <footer>
