--- a/Codigos/entrar.html
+++ b/Codigos/entrar.html
@@ -22,7 +22,7 @@
     <button>Entrar</button>
     <button>Facebook</button>
     <button>Google</button>
-    <p>Não tem conta ainda?<a href="/"> Cadastrar-se</a></p>
+    <p>Não tem conta ainda?<a href="cadastro.html"> Cadastrar-se</a></p>
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
