--- a/Codigos/greeninicio.html
+++ b/Codigos/greeninicio.html
@@ -41,8 +41,8 @@
      <div class="quadNoticias">
         <div><a href="noticiaCO2.HTML"><img src="imagens/noticiaCO2.png" width="100%"><p>Emisssão de CO2</p></a></div>
         <div><a href="noticiaqueim.html"><img src="imagens/noticiaQuem.png" width="100%"><p>Queimadas</p></a></div>
-        <div><img src="imagens/noticiaAlag.png" width="100%"><p>Alagamento do RS</p></div>
-        <div><img src="imagens/noticiaRec.png" width="100%"><p>Reciclagem</p></div>
+        <div><a href="noticiaalag.html"><img src="imagens/noticiaAlag.png" width="100%"><p>Alagamento do RS</p></div></a>
+        <div><a href="noticiarec.html"><img src="imagens/noticiaRec.png" width="100%"><p>Reciclagem</p></div></a>
         
      </div>
     <div class="spacer"></div>
