--- a/Codigos/noticiaqueim.html
+++ b/Codigos/noticiaqueim.html
@@ -19,7 +19,7 @@
 
             Organizações não governamentais estão intensificando campanhas para pressionar o governo a adotar medidas de proteção. A preservação da Amazônia é crucial para o equilíbrio climático global, e é essencial que ações efetivas sejam tomadas para garantir um futuro sustentável.</p>
     </div>
-    <div class="frase"><p>o futuro da biodiversidade e do clima global está em jogo</p></div>
+    <div class="frase"><p>Cada chama que consome a floresta apaga um pedaço do nosso futuro</p></div>
     <div class="spacer"></div>
     <footer>
         <div class="rodape">
