--- a/Codigos/brindes.html
+++ b/Codigos/brindes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +53,7 @@
             </a>
         </div>
         <div class="brinde">
-            <a href="produto.html">
+            <a href="produtobambu.html">
                 <img src="imagens/kitbambu.png" alt="kitBambu">
                 <h4 class="nomeBrinde">Kit 4 Utensilios de Bambu</h4>
                 <div class="pontosBrinde">
@@ -64,7 +63,7 @@
             </a>
         </div>
         <div class="brinde">
-            <a href="produto.html">
+            <a href="produtoeco.html">
                 <img src="imagens/ecobag.png" alt="Ecobag" height="">
                 <h4 class="nomeBrinde">Ecobag</h4>
                 <div class="pontosBrinde">
@@ -74,7 +73,7 @@
             </a>
         </div>
         <div class="brinde">
-            <a href="produto.html">
+            <a href="produtoenfe.html">
                 <img src="imagens/cursoEnfermeira.jpg" alt="cursoEnfermagem" class="brindeCursos">
                 <h4 class="nomeBrinde">50% Curso: Tecnico em Enfermagem</h4>
                 <div class="pontosBrinde">
@@ -84,7 +83,7 @@
             </a>
         </div>
         <div class="brinde">
-            <a href="produto.html">
+            <a href="produtovaso.html">
                 <img src="imagens/vaso.png" alt="vasoGroot">
                 <h4 class="nomeBrinde">Vaso Groot</h4>
                 <div class="pontosBrinde">
