--- a/Codigos/produtobambu.html
+++ b/Codigos/produtobambu.html
@@ -13,15 +13,15 @@
         </div>
     </header>
     <div class="titulo-camiseta">
-    <h2>CURSO CUIDADOR DE IDOSOS</h2>
+    <h2>KIT UTENSILIOS DE BAMBU</h2>
 </div>
     <div class="imagem-produto">
-    <img src="imagens/cuidadordeidosos.png" alt="camiseta" width="70%"></div>
+    <img src="imagens/kitbambu.png" alt="camiseta"></div>
       <div class="botao-resgate">
     <button>RESGATAR BRINDE</button>
       </div>
     <div class="descricao">
-    <p> O curso de cuidador de idosos capacita profissionais a oferecer cuidados adequados a pessoas da terceira idade. Os participantes aprendem sobre saúde, nutrição, higiene, mobilidade e comunicação, com foco na empatia e respeito. Ao final, estão prontos para atuar em residências e instituições, melhorando a qualidade de vida dos idosos.</p>
+    <p>O kit de utensílios de bambu com 4 colheres é uma opção sustentável e prática para a cozinha. Feitas de bambu natural, as colheres são duráveis, leves e não agridem superfícies antiaderentes. Ideal para cozinhar, servir e misturar, esse kit combina funcionalidade e design ecológico. Além de serem resistentes a altas temperaturas, as colheres são fáceis de limpar e contribuem para um estilo de vida mais consciente e sustentável.</p>
     </div>
 
     <hr width="80%"> 
