--- a/Codigos/produtoenfe.html
+++ b/Codigos/produtoenfe.html
@@ -13,15 +13,15 @@
         </div>
     </header>
     <div class="titulo-camiseta">
-    <h2>CURSO CUIDADOR DE IDOSOS</h2>
+    <h2>CURSO TECNICO DE ENFERMAGEM</h2>
 </div>
     <div class="imagem-produto">
-    <img src="imagens/cuidadordeidosos.png" alt="camiseta" width="70%"></div>
+    <img src="imagens/cursoEnfermeira.jpg" alt="camiseta" width="70%"></div>
       <div class="botao-resgate">
     <button>RESGATAR BRINDE</button>
       </div>
     <div class="descricao">
-    <p> O curso de cuidador de idosos capacita profissionais a oferecer cuidados adequados a pessoas da terceira idade. Os participantes aprendem sobre saúde, nutrição, higiene, mobilidade e comunicação, com foco na empatia e respeito. Ao final, estão prontos para atuar em residências e instituições, melhorando a qualidade de vida dos idosos.</p>
+    <p> O curso técnico de enfermagem capacita profissionais a atuarem na área da saúde, oferecendo cuidados básicos e especializados a pacientes. Durante a formação, os alunos aprendem sobre anatomia, farmacologia, procedimentos clínicos, ética e humanização no atendimento. O curso inclui aulas teóricas e práticas, preparando os estudantes para atuar em hospitais, clínicas e domicílios. Ao final, os formados estão prontos para colaborar com equipes de saúde e garantir o bem-estar dos pacientes, desempenhando um papel essencial na recuperação e cuidados em saúde.</p>
     </div>
 
     <hr width="80%"> 
