--- a/Codigos/produtovaso.html
+++ b/Codigos/produtovaso.html
@@ -13,15 +13,15 @@
         </div>
     </header>
     <div class="titulo-camiseta">
-    <h2>CURSO CUIDADOR DE IDOSOS</h2>
+    <h2>VASO GROOT</h2>
 </div>
     <div class="imagem-produto">
-    <img src="imagens/cuidadordeidosos.png" alt="camiseta" width="70%"></div>
+    <img src="imagens/vaso.png" alt="camiseta" width="70%"></div>
       <div class="botao-resgate">
     <button>RESGATAR BRINDE</button>
       </div>
     <div class="descricao">
-    <p> O curso de cuidador de idosos capacita profissionais a oferecer cuidados adequados a pessoas da terceira idade. Os participantes aprendem sobre saúde, nutrição, higiene, mobilidade e comunicação, com foco na empatia e respeito. Ao final, estão prontos para atuar em residências e instituições, melhorando a qualidade de vida dos idosos.</p>
+    <p>O vaso do Groot é um item de decoração inspirado no personagem icônico do filme "Guardiões da Galáxia". Com design que imita a aparência do pequeno Groot, o vaso é ideal para plantas suculentas ou flores, trazendo um toque divertido e encantador para qualquer ambiente. Feito de materiais duráveis, ele combina funcionalidade e estilo, tornando-se uma peça perfeita para fãs da franquia e amantes da natureza. Além de embelezar espaços, o vaso do Groot é uma ótima opção de presente para quem aprecia itens únicos e temáticos.</p>
     </div>
 
     <hr width="80%"> 
