--- a/Codigos/produtoeco.html
+++ b/Codigos/produtoeco.html
@@ -13,15 +13,15 @@
         </div>
     </header>
     <div class="titulo-camiseta">
-    <h2>CURSO CUIDADOR DE IDOSOS</h2>
+    <h2>ECOBAG</h2>
 </div>
     <div class="imagem-produto">
-    <img src="imagens/cuidadordeidosos.png" alt="camiseta" width="70%"></div>
+    <img src="imagens/ecobag.png" alt="camiseta" width="70%"></div>
       <div class="botao-resgate">
     <button>RESGATAR BRINDE</button>
       </div>
     <div class="descricao">
-    <p> O curso de cuidador de idosos capacita profissionais a oferecer cuidados adequados a pessoas da terceira idade. Os participantes aprendem sobre saúde, nutrição, higiene, mobilidade e comunicação, com foco na empatia e respeito. Ao final, estão prontos para atuar em residências e instituições, melhorando a qualidade de vida dos idosos.</p>
+    <p> A ecobag é uma bolsa reutilizável, feita de materiais sustentáveis, como algodão ou poliéster reciclado. Ideal para substituir sacolas plásticas, ela é resistente e prática para compras e transporte de itens do dia a dia. Além de ajudar a reduzir o desperdício de plástico, a ecobag contribui para a proteção do meio ambiente. Disponível em diversos estilos e tamanhos, é uma escolha consciente para quem busca praticidade e sustentabilidade.</p>
     </div>
 
     <hr width="80%"> 
